Fixed a lot of broken css

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,7 +1,7 @@
 $test-color: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
 
 p {
-    font-size: 20px;
+    font-size: 1.165rem;
 }
 
 .about-section {
